---
source: src/dotenv/zod.rs
expression: output
---
Error {
    context: "found some conflicting types while parsing variables with type hints",
    source: ConflictingTypes {
        a: TypeHintAt {
            th: Union(
                [
                    "'a'",
                    "'b'",
                ],
            ),
            line: 1,
            meta: Metadata {
                source: "\n# @type 'a' | 'b'\nKEY=\n            ",
                path: "src/dotenv/.env.test.0",
            },
        },
        b: TypeHintAt {
            th: Number,
            line: 1,
            meta: Metadata {
                source: "\n# @type number\nKEY=\n            ",
                path: "src/dotenv/.env.test.1",
            },
        },
    },
}
